Version 1.7.14+svn:
 * AI:
   * Fix bug #15390: add a try_delete action to modify_ai which has
     'delete if exists, don't complain if not exists' semantics
   * Fix bug #15013: make AI gotos persist between turns when set by
     WML, make the AI don't use gotos for normal moves.
 * Engine:
   * Fix bug #15542: if game encounters a base_unit that refers to a
     unit that the game cannot find, throw exception instead of
     failing assertion.
   * Add a list of team units and a dedicated unit mode to gamestate
     inspector (launched by :inspect command and [inspect] tag).
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Czech, German, Hungarian,
     Japanese, Serbian
 * Multiplayer:
   * Fix bug #15541: fix OOS on [unit] tag generating different
     traits because of usage of local RNG instead of MP RNG.
   * Fix bug #15560 for Dark Forecast: fix OOS in Dark Forecast caused by
     unit advancement not properly synced across the network.
 * Music and sound effects:
   * Added new music track, "Weight of Revenge" by Doug Kaufman
 * User interface:
   * Improved resizing of a window when the contents don't fit, fixes the
     window scrollbars in the MP lobby
   * Fixed redraw invalidation issues in the MP lobby
 	
Version 1.7.14-1.8beta7:
 * AI:
   * Allow to write AI components in LUA
   * Implemented FR #15465: 'protect' goal was split into protect_location, 
     protect_unit, protect_my_unit [goal] tags. protect_my_unit can be used 
     as a direct replacement for protect_leader.
 * Graphics:
   * Fixed bug 15344: missing ice to nothing transition
   * Fixed weird side effect of long first frame in standing anims
   * Fix bug 15366 : overlay terrains badly interacting with submerge and height
     adjustments
   * Fix bug 15544 : bad transitions between roads and deserts with overlay
 * Language and i18n:
   * Updated translations: Catalan, Chinese (Traditional), Czech, Estonian,