@@ -3,6 +3,8 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.7.14+svn:
+ * AI:
+   * Set RCA AI to be the default AI for single-player campaigns.
  * Language and i18n:
    * Updated translations: Chinese (Traditional), Czech, German, Japanese,
      Serbian.
